chore: enhance backend controllers and endpoint logic